added scroll movement for draft player list

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -103,6 +103,7 @@
     <Compile Include="BindingConverters\ImageConverter.cs" />
     <Compile Include="BindingConverters\inttoWeight.cs" />
     <Compile Include="BindingConverters\iPosConverter.cs" />
+    <Compile Include="BindingConverters\isNullConverter.cs" />
     <Compile Include="BindingConverters\longiPosConverter.cs" />
     <Compile Include="BindingConverters\SpeedInttoString.cs" />
     <Compile Include="BindingConverters\StadiumImageConverter.cs" />
