Nearly done with free agency

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -100,6 +100,7 @@
     <Compile Include="BindingConverters\ColorConverter.cs" />
     <Compile Include="BindingConverters\DoubleFormatConverter.cs" />
     <Compile Include="BindingConverters\handednessConverter.cs" />
+    <Compile Include="BindingConverters\HasAnyConverter.cs" />
     <Compile Include="BindingConverters\ImageConverter.cs" />
     <Compile Include="BindingConverters\inttoWeight.cs" />
     <Compile Include="BindingConverters\iPosConverter.cs" />
