--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Models\League_Structure_by_Season.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Passing_Accum_Stats.cs" />
     <Compile Include="Models\Penalty.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
@@ -282,6 +283,7 @@
     <Compile Include="Services\Game_Services.cs" />
     <Compile Include="Services\Schedule_Services.cs" />
     <Compile Include="Services\TrainingCamp_Services.cs" />
+    <Compile Include="Team\Team_Player_Accum_Stats.cs" />
     <Compile Include="Training_Camp\TrainingCamp_Helper.cs" />
     <Compile Include="WindowsLeague\BoxScore_Popup.xaml.cs">
       <DependentUpon>BoxScore_Popup.xaml</DependentUpon>
