Finished player info in player profile popup

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -128,6 +128,7 @@
     <Compile Include="BindingConverters\avgYardsConverter.cs" />
     <Compile Include="BindingConverters\ColorConverter.cs" />
     <Compile Include="BindingConverters\DoubleFormatConverter.cs" />
+    <Compile Include="BindingConverters\DraftInfoConverter.cs" />
     <Compile Include="BindingConverters\handednessConverter.cs" />
     <Compile Include="BindingConverters\HasAnyConverter.cs" />
     <Compile Include="BindingConverters\ImageConverter.cs" />
