--- a/SpectatorFootball/packages.config
+++ b/SpectatorFootball/packages.config
@@ -3,6 +3,8 @@
   <package id="EntityFramework" version="6.3.0" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.6.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net461" />
+  <package id="OxyPlot.Wpf" version="2.0.0" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.112.0" allowedVersions="[1.0.112.0]" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.112.0" allowedVersions="[1.0.112.0]" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.112.0" allowedVersions="[1.0.112.0]" targetFramework="net461" />
