Almost done with ratings progression chart

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Common\LeageConnection.cs" />
     <Compile Include="Common\List_and_Default.cs" />
     <Compile Include="Common\LoadLeagueEventArgs.cs" />
+    <Compile Include="Common\Long_and_Long.cs" />
     <Compile Include="Common\SettingsConnection.cs" />
     <Compile Include="Common\Validator.cs" />
     <Compile Include="CustomControls\CustomTextBox.cs" />
