Finished reworking the draft with new players_by_team table

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -314,6 +314,9 @@
     <Compile Include="Models\Player.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Players_By_Team.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Player_and_Ratings.cs" />
     <Compile Include="Models\Player_and_Ratings_and_Draft.cs" />
     <Compile Include="Models\Player_Awards.cs">
